--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                             to the ever-evolving world of software development.
                             By creating innovative solutions to complex problems and collaborating with like-minded individuals.
                         </p>
-                        <a href="#" class="sim-btn btn-hover-new rounded btn-secondary text-light border border-radius-0" data-text="Download CV"><span>Download CV</span></a>
+                        <a href="https://drive.google.com/file/d/1BLCRia-kvicTF2KWIK7Ipu4Y3XdedB2_/view?usp=sharing" rel="noopener" target="_blank" class="sim-btn btn-hover-new rounded btn-secondary text-light border border-radius-0" data-text="Download CV"><span>Download CV</span></a>
                     </div><!-- end messagebox -->
                 </div><!-- end col -->
 
