--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
     <!-- Site Icons -->
     <link rel="shortcut icon" href="images/Abass-kuku.jpg" type="image/x-icon" />
 
+    <script src="https://kit.fontawesome.com/caeb9ec53e.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -526,7 +529,7 @@
         <div class="footer-distributed">
             <div class="footer-center">
                 <p class="footer-company-name text-center">© Copyright 2024 All Rights Reserved |</p>
-                <p class="text-center">This Portfolio is designed with by AbassKuku</p>
+                <p class="text-center">This Portfolio is designed with <i class="fas fa-heart text-primary"></i> by AbassKuku</p>
             </div>
         </div>
     </div><!-- end container -->
