change the pitch deck image

--- a/index.html
+++ b/index.html
@@ -271,7 +271,6 @@
                     </div>
                     <div class="portfolio-info">
                         <h4>KCA First Semester Project</h4>
-                        <p>Description of Project 4</p>
                         <a href="uploads/trackmydocs.png" title="View Image" data-rel="prettyPhoto[gal]" class="glightbox preview-link">
                             <i class="bi bi-zoom-in"></i>
                         </a>
@@ -289,15 +288,15 @@
             <!-- Project 5 Start -->
             <div class="col-md-4 col-sm-6 gallery-grid gal_a gal_c">
                 <div class="gallery-single fix">
-                    <img src="uploads/medease-pitching.png" class="img-fluid" alt="Project 5">
+                    <img src="uploads/med.png" class="img-fluid" alt="Project 5">
                     <div class="img-overlay">
-                        <a href="uploads/medease-pitching.png" data-rel="prettyPhoto[gal]" class="hoverbutton global-radius">
+                        <a href="uploads/med.png" data-rel="prettyPhoto[gal]" class="hoverbutton global-radius">
                             <i class="fa fa-picture-o"></i>
                         </a>
                     </div>
                     <div class="portfolio-info">
                         <h4>Plp-Pitch Deck</h4>
-                        <a href="uploads/medease-pitching.png" title="View Image" data-rel="prettyPhoto[gal]" class="glightbox preview-link">
+                        <a href="uploads/med.png" title="View Image" data-rel="prettyPhoto[gal]" class="glightbox preview-link">
                             <i class="bi bi-zoom-in"></i>
                         </a>
                         <a href="https://www.canva.com/design/DAGKeF121sM/w9Y-Kx_fnebx5ErlKCG3Aw/edit?utm_content=DAGKeF121sM&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton" title="More Details" class="details-link">
