removed contact form

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                             to the ever-evolving world of software development.
                             By creating innovative solutions to complex problems and collaborating with like-minded individuals.
                         </p>
-                        <a href="https://drive.google.com/file/d/1CuON93HmUXqHZT3oRXr5ERCklB69Cva5/view?usp=drive_link" rel="noopener" target="_blank" class="sim-btn btn-hover-new rounded btn-secondary text-light border border-radius-0" data-text="Download CV"><span>Download CV</span></a>
+                        <a href="https://docs.google.com/document/d/1PECADpzYAcWThYyksgyakFTRh4WIhSrP/edit?usp=sharing&ouid=103475103821123098869&rtpof=true&sd=true" rel="noopener" target="_blank" class="sim-btn btn-hover-new rounded btn-secondary text-light border border-radius-0" data-text="Download CV"><span>Download CV</span></a>
                     </div><!-- end messagebox -->
                 </div><!-- end col -->
 
